updating changes to portfolio home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="main.css">
   <head>
     <meta charset="utf-8">
     <title>Web Portfolio of "Ryan"</title>
