--- a/Zen/index.html
+++ b/Zen/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
   <head>
     <meta charset="utf-8">
     <title>Web Portfolio of "Ryan"</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/blog">Blog</a>
-    <a href="/projects">Projects</a>
-    <a href="/contact">Contact</a>
-
-    <h1>Ryan's Web Portfolio</h1>
+    <h1>Web Portfolio of Ryan</h1>
 
     <h2>Welcome!</h2>
 
