final draft for portfolio sandbox

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <link rel="stylesheet" href="/main.css">
   <head>
@@ -9,9 +8,9 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Web Portfolio of "Ryan"</title>
+    <title>Ryan's Web Portfolio</title>
   </head>
-
+  
   <body class="title text-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
@@ -30,6 +29,7 @@
     </nav>
   <div class="container"></div>
 
+  
     <h1>Ryan's Web Portfolio</h1>
 
     <h2 >Welcome!</h2>
