--- a/contact/index.html
+++ b/contact/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-
 <html>
+  <link rel="stylesheet" href="/main.css">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/main.css">
-    <title>Contact - Ryan's Web Portfolio</title>
-  </head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>Ryan's Web Portfolio</title>
+  </head>
+  
   <body class="title text-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
@@ -20,22 +22,32 @@
             <li><a class="nav-link" href="/">Home</a></li>
             <li><a class="nav-link" href="/blog/">Blog</a></li>
             <li><a class="nav-link" href="/projects/">Projects</a></li>
-            <li><a class="nav-link" href="/contact/">Contact</a></li>
+            <li><a class="nav-link active" href="/contact/">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
   <div class="container"></div>
-  
-  <body>
-    <h1 class="title">Contact</h1>
 
-    <p>
-      You can contact me by email: <a href="mailto:spammails@gmx.ch">spammails@gmx.ch</a>
-    </p>
+  <title>Contact - Web Portfolio of Marco</title>
+</head>
+<body>
+  <h1 class="title">Contact</h1>
 
-    <p>
-      Ryan Manchanthasouk<br>
-      United States
-    </p>
+  <p>
+    You can contact me by email: <a href="mailto:spammails@gmx.ch">spammails@gmx.ch</a>
+  </p>
+
+  <p>
+    Ryan Manchanthasouk<br>
+    United States
+  </p>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </div>
   </body>
+</html>
